<resources>
    <string name="app_name">TrendyolUI</string>
    <string name="title_home">Anasayfa</string>
    <string name="title_go">Trendyol Go</string>
    <string name="title_favorite">Favorilerim</string>
    <string name="title_basket">Sepetim</string>
    <string name="title_account">Hesabım</string>
    <string name="add_to_Basket">Sepete Ekle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>