<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_go"
        android:icon="@drawable/ic_go"
        android:title="@string/title_go" />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/title_favorite" />
    <item
        android:id="@+id/navigation_basket"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/title_basket" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_person"
        android:title="@string/title_account" />
</menu>